--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
     "prettier": "^2.6.2"
+  },
+  "engines": {
+    "node": ">=8.30.0"
   }
 }
